fixed alignment issue with work section

--- a/css/style.css
+++ b/css/style.css
@@ -59,14 +59,14 @@ body {
       text-align: center;
       line-height: 0; }
   .experience__projects {
-    padding: 3rem 3rem;
+    padding: 3rem 3rem 3rem 0;
     grid-row: 1;
     grid-column: 3/4;
     align-self: center;
     justify-self: start;
     display: grid;
-    grid-template-rows: repeat(2, minmax(10vw, 28rem));
-    grid-template-columns: repeat(4, minmax(10vw, 28rem)); }
+    grid-template-rows: repeat(2, minmax(10vw, 30rem));
+    grid-template-columns: repeat(4, minmax(10vw, 30rem)); }
     @media only screen and (max-width: 75em) {
       .experience__projects {
         grid-template-columns: repeat(2, 1fr);
